2007-01-17  Adar Wesley <adarw@mainsoft.com>

	* Repeater.cs: refactored GetData to return data both from DataSource
	and DataSrouceID, Implemented EnableTheming, updated initialization of
	DataBinding according to the pattern of BaseDataBoundControl, fixed
	SelectArguments implementation to call the virtual 
	CreateDataSourceSelectArguments method.

2007-01-17  Konstantin Triger <kostat@mainsoft.com>

	* BaseValidator.cs: ToString the validating property value or
		if null return an empty string.

2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TreeView.cs: fixed RegisterStyle, style names should be without
	leading underscore. fixed RenderNode, node icons should be taken also
	from level styles

2007-01-17  Konstantin Triger <kostat@mainsoft.com>

	* GridView.cs: don't force creating rows collection when SelectedIndex
		changes; EnsureDatabound on select.

2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TreeNode.cs: fixed Bind, fixed Value updating

2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DataList.cs: fixed OnBubbleEvent, added SelectedIndex updating

2007-01-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DetailsView.cs: fixed CreateChildControls, PageIndex cannot be less
	than zero

2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DetailsView.cs: fixed CreateChildControls, PageIndex should be less
	or equal to PageCount

2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.cs: added z-index attribute to popup div's.

2007-01-15 Ilya Kharmatsky  <ilya -at- decode-systems.com>

	* ListControl.cs
	* CheckBoxList.cs
	* ListBox.cs
	Implemented the protected net_2_0 method 'VerifyMultiSelect' with
	proper overloading in derived types.
 
2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* FileUpload.cs: fixed FileName property, should return filename
	without full path on client side

2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* TreeNode.cs
	considers INavigateUIData.NavigateUrl when bound.	
