@@ -1,3 +1,8 @@
+2007-01-18  Adar Wesley <adarw@mainsoft.com>
+
+        * SiteMapDataSource.cs: implemented logic of GetStartNode when
+        StartingNodeOffset is positive.
+
 2007-01-17  Adar Wesley <adarw@mainsoft.com>
 
 	* Repeater.cs: refactored GetData to return data both from DataSource
